# flyCode

./: .gitignore  index.html  readme.txt
analyzeData/NewRig/: analyzeData.fig  analyzeData.m  fly_analyzeDataGUI.fig  fly_analyzeDataGUI.m  fly_analyzeDataWithGUI.m  fly_analyzeDirectory.m  fly_analyzeDirectory.m~  fly_fitHyperData.m  fly_getDataDirectories.m  fly_getDataDirectories_multi.m  fly_loadSSData.m  (+4 more)
analyzeData/fly_arduino/python/ssvep_analysis/: .gitignore  README.md  plot_crf.py  plot_hsnca_summary.py  pyproject.toml  test_bootstrap.py  test_hsnca.py  test_incorporation.py
analyzeData/fly_arduino/python/ssvep_analysis/src/ssvep_analysis/: __init__.py  bootstrap.py  cli.py  converter.py  reader.py
generalToolboxFunctions/: DataHash.m  barweb.m  barwitherr.m  boundedline.m  count_subwins.m  flyTV_imageSim.m  flyTV_runImageSim.m  fly_analyzeDirectoryOld1.m  fly_analyzeDirectoryOld2.m  fly_hackGUIData.m  fly_hackGUIDataDir.m  fly_loadSSData.m  fly_loadSSData_GTF.m  fly_parseGUIPhenotypeFields.m  fly_plotCartData.m  fly_plotCartData_old.m  fly_plotPolarData.m  fly_plotPolarData_old.m  flytv_splitFiles.m  generalDataAnalysis.m  generalDataAnalysis.m~  generalDataAnalysis_AS.m  generalDataAnalysis_AS_ANOVA.m  generalDataAnalysis_Ines.m  generalDataAnalysis_test.m  getPictExt.m  inputsdlg.m  list_35pc_data4Excel4Olivia.m  list_CRF_data4Excel.m  list_Max_data4Excel.m  list_Max_data4_MANOVA.m  list_Max_data4spss.m  list_Max_data4spss_v2.m  list_max_data4spss_v3.m  listdata4spss.m  loadAllDataRand_arw.m  loadAllKCCDataRand_arw.m  nansem.m  plotfits.m  ss_noiseCheck.m  (+4 more)
(+378 files in other folders)
