[project]
name = "ssvep-analysis"
version = "0.2.0"
description = "Bootstrap SSVEP contrast response function analysis for Drosophila electrophysiology data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]

[project.scripts]
ssvep-analyse = "ssvep_analysis.cli:main"
ssvep-convert = "ssvep_analysis.converter:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssvep_analysis"]